fix: adjust grids on mobile

--- a/src/styles/markdown-view.sass
+++ b/src/styles/markdown-view.sass
@@ -13,7 +13,6 @@ $alternative6: #96c5f727
 html
   overflow-y: auto
 
-  
 .markdown-container
   background-color: $text-dark
   font-family: $fuente-principal
@@ -133,8 +132,7 @@ html
     &:hover
       transform: scale(1.5)
 
-
-.sidebar-title  
+.sidebar-title
   font-size: 1.5em
   font-weight: bold
   color: $alternative2
@@ -147,64 +145,64 @@ html
   color: $alternative5
 
 .recent-articles-view
-    padding-top: 30px
-    .title
-      margin-top: 15px
-      margin-bottom: 10px
+  padding-top: 30px
+  .title
+    margin-top: 15px
+    margin-bottom: 10px
     .subtitle
       margin-bottom: 30px
 
-// index page styles
-
-.parent 
+.parent
   display: grid
-  grid-template-columns: repeat(5, 1fr)
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto))
   grid-template-rows: repeat(5, 1fr)
   grid-column-gap: 10px
   grid-row-gap: 10px
-  padding: 30px
-  height: 140vh
+  padding: 50px
+  height: auto
+
   background: linear-gradient(-45deg, $alternative1, $alternative2, $alternative3, $alternative4)
   background-size: 400% 400%
   animation: gradient 15s ease infinite
-  height: auto
+  align-items
+    height: auto
 
 @keyframes gradient
   0%
-    background-position:0% 50%
+    background-position: 0% 50%
   50%
-    background-position:100% 50%
+    background-position: 100% 50%
   100%
-    background-position:0% 50%
+    background-position: 0% 50%
 
 @media screen and (min-width: 1460px)
 
-  .div1  
+  .div1
     grid-area: 1 / 1 / 2 / 4
     border: 2px solid $alternative4
     border-radius: 8px
 
-  .div2  
+  .div2
     grid-area: 1 / 4 / 2 / 5
     border: 2px solid $alternative5
     border-radius: 8px
 
-  .div3  
+  .div3
     grid-area: 1 / 5 / 2 / 6
     border: 2px solid $alternative1
     border-radius: 8px
-  .div4  
+  .div4
     grid-area: 2 / 4 / 3 / 6
     border: 2px solid $alternative4
     border-radius: 8px
 
-  .div5  
-    grid-area: 2 / 2 / 3 / 4 
+  .div5
+    grid-area: 2 / 2 / 3 / 4
     border: 2px solid $alternative5
     border-radius: 8px
 
-  .div6  
-    grid-area: 3 / 1 / 3 / 2 
+  .div6
+    grid-area: 3 / 1 / 3 / 2
     border: 2px solid $alternative1
     border-radius: 8px
 
@@ -213,49 +211,45 @@ html
 
 @media screen and (max-width: 1460px)
 
-  .div1 
+  .div1
     grid-area: 3 / 1 / 4 / 3
-  .div2 
+  .div2
     grid-area: 1 / 1 / 2 / 5
-  .div3 
+  .div3
     grid-area: 2 / 3 / 3 / 5
-  .div4 
+  .div4
     grid-area: 4 / 1 / 5 / 3
-  .div5 
+  .div5
     grid-area: 4 / 3 / 5 / 5
-  .div6 
-    grid-area: 5 / 1 / 6 / 5 
-  
-@media screen and (max-width: 600px)
-  .parent 
+  .div6
+    grid-area: 5 / 1 / 6 / 5
+
+@media screen and (max-width: 770px)
+  .parent
     grid-template-columns: repeat(1, 1fr)
     grid-template-rows: repeat(6, 1fr)
-  
-  .div1  
+
+  .div1
     grid-area: 1 / 1 / 2 / 2
     height: 30vh
 
-
-  .div2  
+  .div2
     grid-area: 2 / 1 / 3 / 2
     height: 30vh
 
-  .div3  
+  .div3
     grid-area: 3 / 1 / 4 / 2
     height: 30vh
 
-
-
-  .div4  
+  .div4
     grid-area: 4 / 1 / 5 / 2
 
-  .div5  
-    grid-area: 5 / 1 / 6 / 2 
+  .div5
+    grid-area: 5 / 1 / 6 / 2
 
-  .div6  
+  .div6
     grid-area: 6 / 1 / 7 / 2
 
-
-@media screen and ( max-width: 564px)
-  .index-text-sm
-    font-size: 0.5em
+@media screen and ( max-width: 615px)
+    .parent
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr))
